apps/homelab/opencloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud
  namespace: opencloud
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - cloud.urosevicvuk.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opencloud
          port: 9200
